@@ -1,0 +1,14 @@
+#! /bin/sh
+
+# Test to make sure `-' can be used in path.
+# Report from Matthew D. Langston.
+
+. $srcdir/defs || exit 1
+
+cat > Makefile.am << 'END'
+include Make-lang
+END
+
+: > Make-lang
+
+$AUTOMAKE
