@@ -1,3 +1,8 @@
+1999-11-07  Tom Tromey  <tromey@cygnus.com>
+
+	* dash.test: New file.
+	* Makefile.am (TESTS): Added dash.test.
+
 1999-08-26  Tom Tromey  <tromey@cygnus.com>
 
 	* texinfo8.test: Use directory named `sub'.
